--- a/assets/scss/common/_variable.scss
+++ b/assets/scss/common/_variable.scss
@@ -21,6 +21,7 @@ $font-color-orange: $orange;
 $border-color-gray: $gray;
 $border-color-white-gray: $white_gray;
 $border-color-gray_strong: $gray_strong;
+$border-color-orenge: $orange;
 
 // global fontsize
 $font-size-xsmall: 1.0rem; // 10px
