--- a/assets/scss/common/_variable.scss
+++ b/assets/scss/common/_variable.scss
@@ -5,10 +5,21 @@ $gray_light: #d5d7d8;
 $white: #fff;
 $gray_strong: #50555c;
 $white_gray: #c4c4c4;
+$yellow: #ffcd1a;
+$green: #01d213;
+$sky: #1ac8ff;
+$purple: #d839f2;
+$blue: #0168b3;
+
 
 // background color
 $background-color-orange: $orange;
 $background-color-white: $white;
+$background-color-yellow: $yellow;
+$background-color-green: $green;
+$background-color-sky: $sky;
+$background-color-purple: $purple;
+$background-color-blue: $blue;
 
 // font color
 $font-color-gray: $gray;
