--- a/assets/scss/application.scss
+++ b/assets/scss/application.scss
@@ -10,7 +10,10 @@
 @import "./components/button";
 @import "./components/header";
 @import "./components/footer";
+@import "./components/icon";
+@import "./components/badge";
 
 // pages
 @import "./pages/login/module";
 @import "./pages/setup/module";
+@import "./pages/promise/module";
