--- a/assets/scss/common/_variable.scss
+++ b/assets/scss/common/_variable.scss
@@ -10,6 +10,7 @@ $green: #01d213;
 $sky: #1ac8ff;
 $purple: #d839f2;
 $blue: #0168b3;
+$red: #cf1c1c;
 
 
 // background color
@@ -27,6 +28,7 @@ $font-color-white: $white;
 $font-color-gray_light: $gray_light;
 $font-color-gray_strong: $gray_strong;
 $font-color-orange: $orange;
+$font-color-red: $red;
 
 // border color
 $border-color-gray: $gray;
