--- a/assets/scss/application.scss
+++ b/assets/scss/application.scss
@@ -17,3 +17,4 @@
 @import "./pages/login/module";
 @import "./pages/setup/module";
 @import "./pages/promise/module";
+@import "./pages/profileEdit/module";
