--- a/assets/scss/components/_input.scss
+++ b/assets/scss/components/_input.scss
@@ -19,3 +19,16 @@ input[type="password"] {
     background-color: $background-color-white;
   } 
 }
+textarea {
+  width: 100%;
+  height: 124px;
+  resize: none;
+  padding: 12px;
+  line-height: 16px;
+  background-color: $background-color-white;
+  border: 2px solid $border-color-gray_strong;
+  &:focus {
+    outline: none;
+    background-color: $background-color-white;
+  }
+}
