--- a/assets/scss/application.scss
+++ b/assets/scss/application.scss
@@ -12,6 +12,7 @@
 @import "./components/footer";
 @import "./components/icon";
 @import "./components/badge";
+@import "./components/modal";
 
 // pages
 @import "./pages/login/module";
